// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar Snap should render Avatar -- props circle 1`] = `
<view
  class="at-avatar at-avatar--normal at-avatar--circle"
>
  <text
    class="at-avatar__text"
  />
</view>
`;

exports[`Avatar Snap should render Avatar -- props image 1`] = `
<view
  class="at-avatar at-avatar--normal"
>
  <image
    class="at-avatar__img"
    src="https://jdc.jd.com/img/100"
  />
</view>
`;

exports[`Avatar Snap should render Avatar -- props openData 1`] = `
<view
  class="at-avatar at-avatar--normal"
>
  <open-data
    type="userAvatarUrl"
  />
</view>
`;

exports[`Avatar Snap should render Avatar -- props size(large)  1`] = `
<view
  class="at-avatar at-avatar--large"
>
  <text
    class="at-avatar__text"
  />
</view>
`;

exports[`Avatar Snap should render Avatar -- props size(normal)  1`] = `
<view
  class="at-avatar at-avatar--normal"
>
  <text
    class="at-avatar__text"
  />
</view>
`;

exports[`Avatar Snap should render Avatar -- props size(small)  1`] = `
<view
  class="at-avatar at-avatar--small"
>
  <text
    class="at-avatar__text"
  />
</view>
`;

exports[`Avatar Snap should render Avatar -- props text 1`] = `
<view
  class="at-avatar at-avatar--normal"
>
  <text
    class="at-avatar__text"
  >
    凹
  </text>
</view>
`;
